<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_label_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/titleEditText"
        android:autofillHints=""
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="16"
        android:hint="@string/title_hint"
        android:textSize="18sp"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/endDateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_label_end_date"
        android:textSize="18sp"
        android:textColor="@color/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleEditText"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/endDateEditText"
        android:enabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/select_end_date"
        android:textSize="18sp"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/endDateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/selectDateButton"
        app:layout_constraintBottom_toBottomOf="@id/selectDateButton"
        />

    <Button
        android:id="@+id/selectDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/primary"
        android:text="@string/select_date"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/endDateTextView"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/priorityTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_label_priority"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectDateButton"
        android:layout_marginTop="20dp"
        />

    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priorityTextView"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/titleValidationErrorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/error_msg_title"
        android:textSize="18sp"
        android:textColor="@color/error"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prioritySpinner"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/endDateErrorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/error_msg_end_date"
        android:textSize="18sp"
        android:textColor="@color/error"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleValidationErrorTextView"
        android:layout_marginTop="5dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
