<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/create_task"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/tableHeaderLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/addButton"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/titleHeaderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/header_title"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/endDateHeaderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/header_end_date"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/progressHeaderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/header_progress"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            />
        <View
            android:id="@+id/deleteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tableHeaderLinearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
